--- a/src/themes/material/assets/mat.css
+++ b/src/themes/material/assets/mat.css
@@ -765,3 +765,11 @@ main {
   max-height: 100vh;
   overflow-y: auto;
 }
+
+#article iframe {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+    margin: 1rem 0;
+}
